Fix alignment on advanced boxes

--- a/app/assets/stylesheets/_advanced.css.scss
+++ b/app/assets/stylesheets/_advanced.css.scss
@@ -1,5 +1,6 @@
 
 div.advanced-column {
+  vertical-align: top;
   display: inline-block;
   width: 250px;
   height: auto;
